significant reworking of transformation and supporting libraries to work more efficiently